--- a/src/componnents/styling.css
+++ b/src/componnents/styling.css
@@ -4,9 +4,15 @@ body{
 .FFFFFFFF{
     width: 100%;
 }
+.P99{
+    width: 100%;
+    /* height: 50px; */
+}
 .navbar{
     width: 100%;
     height: 50px;
+    box-shadow: 2px 2px 4px 0px rgba(178, 178, 178, 0.75);
+
     display: flex;
     position: fixed;
     top: 0px;
@@ -26,6 +32,18 @@ justify-content: space-around
     /* border: 1px solid black;z */
     display: flex;
     
+}
+.ForModile .DA2{
+    width: 40px;
+    height: 40px;
+}
+.ForMobile{
+    width: 100%;
+    height: 50px;
+    /* position: ; */
+    visibility: hidden;
+    border: 3px solid black;
+    /* height: 100%; */
 }
 .navbar .TheLogo .DA3{
     width: 40px;
@@ -49,13 +67,39 @@ justify-content: space-around
     
 }
 @media screen and (max-width: 728px) {
+    .ForModile{
+        width: 100%;
+        position: relative;
+        visibility: visible;
+        /* height: 100%; */
+    }
+    .navbar    svg{
+
+        position: absolute;
+        visibility: hidden;
+    }
+    .navbar    div{
+        visibility: hidden;
+        position: absolute;
+        /* justify-content: none; */
+    }
+}
+@media screen and (max-width: 728px) {
     .navbar .Links{
         visibility: hidden;
         position: absolute;
     }
-.navbar .Account .panier{
+    .navbar .Account {
+        visibility: hidden;
+        position: absolute;
+        /* visibility: hidden; */
 
 margin-right: -30px;
+}
+
+
+.navbar    {
+    justify-content: none;
 }
 .navbar .TheLogo .DA3{
    
@@ -149,9 +193,22 @@ justify-content: center;
     display: flex;
     flex-direction: column;
     
-justify-content: flex-start;
-align-items: center;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: -100px;
+    margin-bottom: 100px;
 }
+@media only screen and (max-width: 947px) {
+    /* body {
+        background-color: lightcoral;
+    } */
+    .Filltre{
+        margin-top: -100px;
+        margin-bottom: 0px;
+    
+    }
+  }
+
 .Filltre .Title2{
     color: rgba(47, 95, 208);
     color: rgb(0, 0, 0);
@@ -316,7 +373,21 @@ justify-content: center
     padding: 10px 10px;
     /* width: 40%; */
     background-color: rgba(240, 248, 255, 0.03);
+    margin-top: -200px;
+    /* margin-bottom: 250px; */
 }
+@media only screen and (max-width: 947px) {
+    /* body {
+        background-color: lightcoral;
+    } */
+    .theContent
+    {
+        /* margin-top: -100px; */
+        margin-top: -90px;
+    
+    }
+  }
+
 .start{
     font-weight: bold;
     font-size: 34px;
@@ -863,4 +934,139 @@ flex-direction: column;
     font-family: sans-serif;
 
     /* text-star */
+}
+.NAVNAV{
+    display: flex;
+    /* position: ; */
+    position: fixed;
+    top: 0px;
+    height: 50px;
+    width: 100%;
+    z-index: 100;
+}
+.MObile .LOGO img{
+    position: absolute;
+  top: 0%;
+  left: 0%;
+  /* transform: translate(-50%, -50%); */
+  width: 100%;
+  height: 90%;
+  
+}
+.MObile .LOGO{
+    width: 100px;
+    height: 50px;
+    /* border: 1px solid black; */
+   
+    position: relative;
+    /* width: 300px; Set your desired width */
+    /* height: 200px; Set your desired height */
+    overflow: hidden;
+    margin-left: 25px;
+    /* width: 100%; */
+    /* height: 100%; */
+    object-fit: cover; 
+
+}
+.MObile{
+    display: flex;
+    width: 90%;
+    height: 50px;
+    /* background-color: red; */
+    margin: auto;
+    /* border: 1px solid black; */
+background-color: white;
+    
+    justify-content: space-between;
+    
+    
+align-items: center;
+}
+.MObile .Object1 {
+
+    align-items: center;
+    display: flex;
+}
+.MObile .Object1 .DA33{
+    /* margin-left: 80px; */
+    /* align-items: center; */
+    /* display: flex; */
+    width: 40px;
+    height: 40px;
+}
+.MObile .Object2 .panier{
+    /* margin-right: 50px; */
+    width: 50px;
+    height: 40px;
+    display: flex;
+    
+}
+.MObile .Object2 .achatNumber{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    padding: 4px 4px;
+    font-weight: bold;
+    background-color: red;
+    color: white;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    margin-left: -15px;
+justify-content: center;
+    /* margin-top: -10px; */
+}
+a{
+    text-decoration: none;
+}
+/* .Object1 , .Object2{
+    width: 45%;
+} */
+.NN{
+    display: flex;
+    width: 100%;
+    height: 50px;
+    background-color: white;
+    z-index: 99;
+}
+@media screen and (max-width: 766px) {
+    .NN{
+        z-index: 105;
+
+    }
+    /* .MObile{
+        z-index: 99;
+    visibility: visible;
+    } */
+}
+.NAVNAV{
+    /* height: 100px; */
+    display: flex;
+    width: 100%;
+    /* border: 10px solid black; */
+}
+.Pagination{
+    width: 100%;
+    display: flex;
+    margin-top: 35px;
+}
+.Pagination .TheButtons {
+    margin: auto;
+
+}
+.Pagination .TheButtons button:hover{
+    color: white;
+    background-color: rgb(65, 111, 151);
+}
+.Pagination .TheButtons button{
+    font-size: 15px;
+    background-color: transparent;
+    border-radius: 3px;
+    border: 1px solid rgb(65, 111, 151);
+    margin-left:5px ;
+    margin-right:5px ;
+    color: rgb(65, 111, 151);
+    font-family: sans-serif;
+    padding: 5px 5px;
+
 }
