--- a/react/src/componnents/Style/LogInStyling.css
+++ b/react/src/componnents/Style/LogInStyling.css
@@ -106,6 +106,7 @@ align-items: center;
     text-align: center;
     background-color: red;
     font-family: sans-serif;
+    padding: 4px 1px;
     /* visibility: hidden; */
     /* position: absolute; */
 
@@ -158,5 +159,9 @@ justify-content: center;
     color: rgb(29, 96, 154);
     margin-bottom: -5px;
     /* text-decoration: underline; */
+    /* padding: 10px 5px; */
+    
+}
+#m3 label{
 
 }
