--- a/react/src/componnents/Style/Panier.css
+++ b/react/src/componnents/Style/Panier.css
@@ -56,6 +56,30 @@
     
     
 }
+.Confirmation .LALA1{
+    margin-top: 10px;
+    width: 100%;
+    text-align: center;
+    padding: 1px 00px;
+    color: rgb(255, 255, 255);
+    font-family: sans-serif;
+    font-size: 15px;
+    /* font-weight: bold; */
+    background-color: red;
+
+}
+.Confirmation .LALA2{
+    margin-top: 10px;
+    width: 100%;
+    text-align: center;
+    padding: 1px 00px;
+    color: rgb(255, 255, 255);
+    font-family: sans-serif;
+    font-size: 15px;
+    /* font-weight: bold; */
+    background-color: rgb(27, 181, 96);
+
+}
 .Confirmation .LALA{
     padding: 10px 10px;
     color: black;
