--- a/react/src/componnents/Style/LogInStyling.css
+++ b/react/src/componnents/Style/LogInStyling.css
@@ -4,6 +4,7 @@
     display: flex;
     /* border: 1px solid black; */
     height: 500px;
+    /* height: 250px; */
     background-image: url('../assetes/clean_boutique_desk.jpg');
     /* Make the background image cover the entire viewport */
     background-size: cover;
@@ -21,6 +22,7 @@
     background-color: rgba(255, 255, 255, 0.701);
     box-shadow: 11px 11px 47px 0px rgba(235, 235, 235, 0.75);
     height: 420px;
+    height: 320px;
     border-radius: 6px;
     margin: auto;
     /* margin-top: 10px; */
