--- a/react/src/pages/landing/styles.css
+++ b/react/src/pages/landing/styles.css
@@ -1,3 +1,4 @@
+/* @import url('../../../public/css/theme.css'); */
 .App {
   font-family: sans-serif;
   text-align: center;
@@ -15,4 +16,41 @@
   background-position: center center;
   background-repeat: no-repeat;
   will-change: transform;
+}
+.i1{
+  height: 80px;
+}
+.i3{
+  width: 100%;
+  display: flex;
+}
+.i4{
+  margin-top: 80px;
+  width: 100%;
+  /* height: 150px; */
+  background-color: #2c7be5;
+}
+.i7 {
+  margin: auto;
+}
+.i5{
+  z-index: 300;
+}
+.i6{
+  margin-top: -12px;
+  /* border-radius: 0px; */
+}
+.i8{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 90%;
+  height: 85%;
+}
+@media (max-width: 700px) {
+  .i8{
+    width: 100%;
+    height: 100%;
+  }
+  
 }
