--- a/react/src/pages/products/style.css
+++ b/react/src/pages/products/style.css
@@ -4,3 +4,19 @@
     flex-direction: column;
     align-items: center;
 }
+.i11{
+    /* border: 2px solid black; */
+    width: 100%;
+    display: flex;
+    height: 250px;
+    align-items: center;
+    justify-content: center;
+}
+.i13{
+    position: absolute;
+    top:  0;
+    width: 100px;
+    height: 100px;
+    background-color: yellowgreen;
+    left:  0px;
+}
