--- a/react/src/pages/landing/styles.css
+++ b/react/src/pages/landing/styles.css
@@ -27,14 +27,24 @@
 .i4{
   margin-top: 80px;
   width: 100%;
+  display: flex;
+  align-items: center;
+  transition:    5s;
+  animation-duration: 5s;
   /* height: 150px; */
   background-color: #2c7be5;
+  /* background-color: #3ee52c; */
 }
 .i7 {
   margin: auto;
 }
 .i5{
   z-index: 300;
+  width: 100%;
+  /* border: 1px solid black; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .i6{
   margin-top: -12px;
@@ -64,9 +74,9 @@
   align-items: center;
 }
 .i16{
-  width: 45%;
+  width: 55%;
   /* height: 300px; */
-  height: 500px;
+  height: 600px;
   padding-bottom: 20px;
   border: 1px solid black;
   min-width: 350px;
@@ -75,18 +85,75 @@
 .i19{
   
   width: 50%;
-  min-width: 350px;
+  /* min-width: 300px; */
+  max-width: 410px;
 }
 .i20{
   min-width: 350px;
+  min-width: 350px;
+  margin-right: -10px;
 }
 @media (max-width: 990px) {
   .i16{
     width: 100%;
-    margin-right: none;
+    margin-right: 5px;
     margin-bottom: 10px;
+    
   }
   .i19{
-    width: 100%;}
+    width: 100%;
+    /* width: 300px; */
+  }
     
+}
+.i21{
+  /* border: 1px solid black; */
+  min-width: 250px;
+  max-width:  250px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.i22{
+  width: 100%;
+  /* height: 500px; */
+  /* border: 1px solid black; */
+  /* position: fixed; */
+  z-index: 200;
+  /* margin-top: 17px; */
+  /* margin-top: ; */
+  /* opacity: 0; Initially hide the component */
+  transition:    5s;
+  /* background-color: white; */
+}
+.i23{
+  width: 100%;
+}
+.i25{
+  
+  font-size: 30px;
+  background-color: #2cdd73;
+  /* width: none; */
+  color: white;
+  font-weight: bold;
+}
+.i26{
+  display: flex;
+  flex-direction:column;
+  padding-right: 50px;
+}
+.i27{
+  font-weight: bold;
+
+  font-size: 22px;
+
+  
+}
+.oo{
+  display: flex;
+  flex-wrap: wrap;
+}
+.i28{
+  padding-top: 3px;
+  /* text-decoration: none; */
+  /* padding-top: 3px; */
 }
