--- a/react/src/pages/landing/styles.css
+++ b/react/src/pages/landing/styles.css
@@ -59,8 +59,8 @@
 }
 @media (max-width: 700px) {
   .i8{
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 85%;
   }
   
 }
@@ -109,7 +109,6 @@
   margin-right: 20px;
 }
 .i22{
-  width: 100%;
   /* height: 500px; */
   /* border: 1px solid black; */
   /* position: fixed; */
@@ -118,18 +117,18 @@
   /* margin-top: ; */
   /* opacity: 0; Initially hide the component */
   transition:    5s;
-  font-size: 30px;
+  font-size: 20px;
   /* background-color: white; */
 }
 .i23{
   width: 100%;
 }
 .i25{
+  font-family: "Montserrat", sans-serif;
   
-  font-size: 30px;
+  font-size: 20px;
   /* width: none; */
   color: white;
-  font-weight: bold;
 }
 .i26{
   display: flex;
@@ -137,7 +136,6 @@
   padding-right: 50px;
 }
 .i27{
-  font-weight: bold;
 
   font-size: 26px;
 
