--- a/react/src/pages/landing/styles.css
+++ b/react/src/pages/landing/styles.css
@@ -146,3 +146,9 @@
   /* text-decoration: none; */
   /* padding-top: 3px; */
 }
+.i78{
+  width: 120%;
+  height: 500px;
+  margin-top: -21px;
+  background-color: #0a3b79;
+}
