--- a/react/src/pages/landing/styles.css
+++ b/react/src/pages/landing/styles.css
@@ -74,6 +74,7 @@
 .i16{
   width: 35%;
   height: 500px;
+  /* border: 1px solid black; */
   padding-bottom: 20px;
   min-width: 350px;
   max-height: 500px;
@@ -151,4 +152,83 @@
   padding-top: 3px;
   /* text-decoration: none; */
   /* padding-top: 3px; */
+}
+.p2{
+  margin-top: 50px;
+  position: relative;
+}
+.p1{
+  width: 100%;
+  position: relative;
+  visibility: hidden;
+  height: 450px;
+  position: absolute;
+  padding: 30px 30px;
+  background-color: #e5ebf4;
+}
+.LLLL{
+  margin-bottom: 10px;
+  height: 20px;
+}
+.lol:hover{
+
+  background-color: #215fb0;
+}
+.lol{
+  margin-top: 10px;
+  width: 100%;
+  border: 0px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #2c7be5;
+  color: white;
+  border-radius: 2px;
+}
+.box{
+  margin-top: 10px;
+  width: 90%;
+  /* border: 1px solid black; */
+  height: 150px;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  align-items: center;
+}
+.box a{
+font-size: 15px;
+
+}
+.o78{
+  display: flex;
+  margin-top: 10px;
+  height: 30px;
+  text-align: center;
+  /* border: 1px solid black; */
+  margin: auto;
+}
+.p8787{
+  margin-top: 10px;
+  margin: auto;
+}
+.o74{
+  font-size: 12px;
+}
+.p91{
+  /* position: relative; */
+  visibility: visible;
+}
+
+@media screen and (max-width: 590px) {
+  .p91{
+    position: absolute;
+    visibility:hidden;
+    top: -30px;
+    z-index: 1;
+  }
+  .p1{
+    z-index: 100;
+    margin-top: -60px;
+    position: relative;
+    visibility: visible;
+  }
 }
