--- a/react/src/components/common/style.css
+++ b/react/src/components/common/style.css
@@ -1,3 +1,4 @@
+@import url(https://db.onlinewebfonts.com/c/d6cce52ffda97a2370a12e85836bfc11?family=Boucherie+Block+W05+Bold);
 .i15{
     padding-top: 0px;
     padding-bottom: 50px;
