fix poster positions

--- a/react/src/pages/landing/styles.css
+++ b/react/src/pages/landing/styles.css
@@ -226,3 +226,12 @@ font-size: 15px;
     visibility: visible;
   }
 }
+
+ .slick-slide {
+      margin: 0 27px;
+  }
+
+  /* the parent */
+  .slick-list {
+      margin: 0 -27px;
+  }
