--- a/react/src/pages/landing/styles.css
+++ b/react/src/pages/landing/styles.css
@@ -67,7 +67,7 @@
   height: 500px;
   /* border: 1px solid black; */
   padding-bottom: 20px;
-  min-width: 350px;
+  max-width: 350px;
   max-height: 500px;
   margin-right: 15px;
 }
