--- a/react/src/pages/landing/styles.css
+++ b/react/src/pages/landing/styles.css
@@ -29,6 +29,7 @@
   width: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
   transition:    5s;
   animation-duration: 5s;
   /* height: 150px; */
